--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
 </h1>
 
 <body>
-    <div class="floating-image">
-        <img src="Images/placeholder.png" class="floating-card" id="floatingImage"/>
-        <button class="pet-button"></button>
-    </div>
+        <div class="intro bg">
+            <div class="intro-test">
+                <div class="floating-text1">
+                    <strong class="BWT floating-text1">Art Gallery</strong>
+                </div>
+
+                <div class="floating-text2">
+                    <strong class="MWT floating-text2">Some art I've made</strong>
+                </div> 
+            </div>
+
+            <div class="floating-image intro-image">
+                <img src="Images/Idle.png" class="floating-card" id="floatingImage"/>
+                <button class="pet-button"></button>
+            </div>
+        </div>
 </body>
+
+<footer>
+    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'Q5Q61CTTM1');kofiwidget2.draw();</script> 
+</footer>
