--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div class="intro bg">
             <div class="intro-test">
                 <div class="floating-text1">
-                    <strong class="BWT floating-text1">Art Gallery</strong>
+                    <strong class="BWT fadein">Art Gallery</strong>
                 </div>
 
                 <div class="floating-text2">
-                    <strong class="MWT floating-text2">Some art I've made</strong>
+                    <strong class="MWT fadein">Some art I've made</strong>
                 </div> 
             </div>
 
             <div class="floating-image intro-image">
-                <img src="Images/Idle.png" class="floating-card" id="floatingImage"/>
+                <img src="Images/Idle.gif" class="floating-card fadein" id="floatingImage"/>
                 <button class="pet-button"></button>
             </div>
         </div>
