--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="Styles/style.css">
+    <link rel="icon" type="image/x-icon" href="Images/favicon.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" defer></script>
@@ -9,10 +10,14 @@
 <body>
 
 <h1>
+    
+</h1>
+
+<h2>
     <header>
         <img src="Images/Logo.png" class="logo">
     </header>
-</h1>
+</h2>
 
 <body>
         <div class="intro bg">
