--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
 
 <h2>
     <header>
-        <img src="Images/Logo.png" class="logo">
+        <img src="Images/Logo.png" class="logo"> 
+        <div class="buttongrid">
+            <button class="topbutton">About Me</button>
+        </div>
     </header>
 </h2>
 
 <body>
-        <div class="intro bg">
-            <div class="intro-test">
+        <div class="section bg">
+            <div class="section-left">
                 <div class="floating-text1">
                     <strong class="BWT fadein">Art Gallery</strong>
                 </div>
@@ -31,7 +34,7 @@
                 </div> 
             </div>
 
-            <div class="floating-image intro-image">
+            <div class="floating-image section-right">
                 <img src="Images/Idle.gif" class="floating-card fadein" id="floatingImage"/>
                 <button class="pet-button"></button>
             </div>
