Added buttons yay

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="script.js" defer></script>
 </head>
-<body>
 
 <h1>
     
@@ -15,7 +14,21 @@
 
 <h2>
     <header>
-        <img src="Images/Logo.png" class="logo">
+        <img src="Images/Logo.png" class="logo floating-image">
+        <div class="buttongrid">
+            <div class="floating-text2">
+                <button class="button1">About Me</button>
+            </div>
+            <div class="floating-text1">
+                <button class="button1">Art Gallery</button>
+            </div>
+            <div class="floating-text2">
+                <button class="button1">Programming Gallery</button>
+            </div>
+            <div class="floating-text1">
+                <button class="button1">Connections</button>
+            </div>
+        </div>
     </header>
 </h2>
 
@@ -39,5 +52,7 @@
 </body>
 
 <footer>
-    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'Q5Q61CTTM1');kofiwidget2.draw();</script> 
+    <div class="buttongrid">
+        <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#72a4f2', 'Q5Q61CTTM1');kofiwidget2.draw();</script> 
+    </div>
 </footer>
