Changed up the whole petting script to make it more flexible, especially for adding multiple pettables

--- a/index.html
+++ b/index.html
@@ -42,9 +42,14 @@
                 </div> 
             </div>
 
-            <div class="floating-image section-right">
+            <div class="floating-image section-right pettable-image"
+                data-idle="Images/Idle.gif"
+                data-hover="Images/LookUp.png"
+                data-click="Images/Pat.png">
+
                 <img src="Images/Idle.gif" class="floating-card fadein" id="floatingImage"/>
                 <button class="pet-button"></button>
+                
             </div>
         </div>
 </body>
