--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="Images/favicon.png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="script.js" defer></script>
+    <script src="indexscript.js" defer></script>
 </head>
 
 <h1>
@@ -13,19 +13,19 @@
 </h1>
 
 <header>
-        <img src="Images/Logo.png" class="logo floating-image">
+        <img src="Images/Logo.png" class="logo floating-image" draggable="false">
         <div class="buttongrid">
             <div class="floating-text2">
-                <button class="button1">About Me</button>
+                <a href="" class="button1">About Me</a>
             </div>
             <div class="floating-text1">
-                <button class="button1">Art Gallery</button>
+                <a href="artgallery.html" class="button1">Art Gallery</a>
             </div>
             <div class="floating-text2">
-                <button class="button1">Programming Gallery</button>
+                <a class="button1">Programming Gallery</a>
             </div>
             <div class="floating-text1">
-                <button class="button1">Connections</button>
+                <a class="button1">Connections</a>
             </div>
         </div>
 </header>
