Added images (probably not the most compact way to add them atm)

--- a/artgallery.html
+++ b/artgallery.html
@@ -18,12 +18,67 @@
     <div class="biggallery" class="fadein">
         <div class="gallery-image">
             <div class="button1">
-                <img src="Images/Logo.png" class="floating-text1" draggable="false">
+                <img src="Images/Gallery/Unnamed.png" class="floating-text1 image1" draggable="false">
             </div>
-            
+
             <div class="info-box">
-                <h3 class="info-title floating-text1">Logo Placeholder</h3>
-                <p class="info-date floating-text2">9.2 2026</p>
+                <h3 class="info-title floating-text1">Unnamed</h3>
+                <p class="info-date floating-text2">12.2 2026</p>
+            </div>
+        </div>
+
+        <div class="gallery-image">
+             <div class="button1">
+                <img src="Images/Gallery/Tall.png" class="floating-text2 image1" draggable="false">
+            </div>
+
+            <div class="info-box">
+                <h3 class="info-title floating-text1">Tall</h3>
+                <p class="info-date floating-text2">6.2 2026</p>
+            </div>
+        </div>
+
+        <div class="gallery-image">
+             <div class="button1">
+                <img src="Images/Gallery/Bath.png" class="floating-text1 image1" draggable="false">
+            </div>
+
+            <div class="info-box">
+                <h3 class="info-title floating-text1">Bath</h3>
+                <p class="info-date floating-text2">4.2 2026</p>
+            </div>
+        </div>
+
+        <div class="gallery-image">
+             <div class="button1">
+                <img src="Images/Gallery/Starbucks.png" class="floating-text2 image1" draggable="false">
+            </div>
+
+            <div class="info-box">
+                <h3 class="info-title floating-text1">Starbucks</h3>
+                <p class="info-date floating-text2">21.1 2026</p>
+            </div>
+        </div>
+
+        <div class="gallery-image">
+             <div class="button1">
+                <img src="Images/Gallery/Posture.png" class="floating-text1 image1" draggable="false">
+            </div>
+
+            <div class="info-box">
+                <h3 class="info-title floating-text1">Posture Guide</h3>
+                <p class="info-date floating-text2">20.1 2026</p>
+            </div>
+        </div>
+
+        <div class="gallery-image">
+             <div class="button1">
+                <img src="Images/Gallery/Idk.png" class="floating-text2 image1" draggable="false">
+            </div>
+
+            <div class="info-box">
+                <h3 class="info-title floating-text1">Unnamed</h3>
+                <p class="info-date floating-text2">7.1 2026</p>
             </div>
         </div>
     </div>
